fixed some overflow

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  &__logo-link {
+    margin-right: 20px;
+  }
+
   &__nav-shadow {
     position: fixed;
     z-index: 900;
@@ -106,11 +110,6 @@
           font-size: 16px;
         }
       }
-      #{$self}__buttons {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
       #{$self}__button {
         margin-bottom: 20px;
         display: inline-block;
@@ -133,7 +132,7 @@
     margin-right: 20px;
     display: inline-flex;
     cursor: pointer;
-
+    background-color: white;
     &_dropdown {
       margin-right: 28px;
 
@@ -158,7 +157,23 @@
     font-size: 14px;
     line-height: 17px;
     color: $text-color-brightness-50;
+    white-space: nowrap;
+    max-width: 92px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    transition: $tr-fast;
 
+    &:hover {
+      overflow: visible;
+      white-space: pre-line;
+      overflow-x: visible;
+      max-width: 150px;
+    }
+
+    @media screen and (max-width: $sm-desktop-width) {
+      max-width: 150px;
+      overflow-x: visible;
+    }
     &:visited {
       color: rgba(185, 101, 185, 0.98);
     }
@@ -176,6 +191,12 @@
     &:last-child {
       margin-right: 0;
     }
+  }
+
+  &__buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   &__cabinet {
