--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -8,8 +8,7 @@
   &_colored {
     position: initial;
     width: 100%;
-    max-width: 40px;
-    max-width: 105px;
+    min-width: 105px;
     height: 100%;
   }
 }
